<resources>
    <string name="app_name">SIGO</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">Add new entry</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sync_now">Sync now</string>
    <string name="log_out">Log out</string>
    <string name="confirm_log_out">Are you sure you want to log out?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="language_pref">Choose language</string>
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>es</item>
    </string-array>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>10 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1800000</item>
         <item>3600000</item>
         <item>10800000</item>
         <item>21600000</item> 
         <item>36000000</item> 
    </string-array>
    <string name="pref_automatic_sync">Automatic synchronisation</string>

    <!-- Strings related to the socio economic questionnaire -->
    <string name="save">Save</string>
    <string name="hungryInBed">Do you often go hungry to bed?</string>
    <string name="skippedMeals">How many meals have you been forced to skip in the past month?</string>
    <string name="nameOfFamilyMember">Name of family representative?</string>
    <string name="name">Name</string>
    <string name="nameOfCommunity">To which community does the family belong?</string>
    <string name="community">Community</string>
    <string name="communities">Choose Community</string>

    <string-array name="skippedMeals">
        <item>0</item>
        <item>1-3</item>
        <item>4-6</item>
        <item>7-9</item>
        <item>10+</item>
    </string-array>
    <string name="title_activity_family">FamilyActivity</string>

    <!-- Strings related to the local database queries -->
    <string name="exit_without_saving">Exit without saving?</string>
    <string name="edit">Edit</string>
    <string name="saveSuccessful">Entry saved successfully</string>
    <string name="syncSuccessful">Synchronization with the sigo server has completed successfully</string>
    <string name="syncNotSuccessful">It is not possible to synchronize with the sigo server at this time</string>
    <string name="saveNotSuccessful">Entry could not be saved, please validate inputs</string>
    <string name="confirm_delete">Delete entry?</string>
    <string name="deleteSuccessful">The entry was successfully deleted</string>
    <string name="deleteNotSuccessful">It was not possible to delete this entry</string>
    <string name="delete">Delete</string>
</resources>
