<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="automatic_sync"
        android:title="@string/pref_automatic_sync" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:dependency="automatic_sync"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="%s"
        android:title="@string/pref_title_sync_frequency"
        android:defaultValue="180" />

    <ListPreference
        android:entries="@array/pref_language_titles"
        android:entryValues="@array/pref_language_values"
        android:key="language_pref"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="%s"
        android:title="@string/language_pref"
        android:defaultValue="es-mx" />


</PreferenceScreen>
